# auto-quorum

./: .dockerignore  .gitignore  Cargo.toml  README.md  auth.sh  plots.ipynb
benchmarks/: .dockerignore  .gitignore  Dockerfile  README.md  benchmarks.py  gcp_cluster.py  graph_experiment.py  graph_experiments.py  metronome_cluster.py  metronome_configs.py  pyproject.toml  setup-gcp.sh
benchmarks/graphs/: base_graphs.py  increasing_clients_graphs.py  local_run_graphs.py  metronome_size_graphs.py  new_straggler_graphs.py  straggler_graphs.py
benchmarks/startup_scripts/: instance_startup_script.sh
build_scripts/: auth.sh  client-1-config.toml  client-2-config.toml  client-3-config.toml  cluster-config.toml  debug_instrumentation.py  docker-compose.yml  local_bench.sh  push-client-image.sh  push-server-image.sh  run-local-client.sh  run-local-cluster.sh  server-1-config.toml  server-10-config.toml  server-11-config.toml  server-2-config.toml  server-3-config.toml  server-4-config.toml  server-5-config.toml  server-6-config.toml  server-7-config.toml  server-8-config.toml  server-9-config.toml  update_toml.sh
common/: Cargo.toml
common/src/: messages.rs  util.rs
omnipaxos_client/: Cargo.toml  Dockerfile
omnipaxos_client/src/: client.rs  main.rs  network.rs
omnipaxos_server/: Cargo.toml  Dockerfile
omnipaxos_server/src/: main.rs  network.rs  server.rs
src/: common.rs
src/client/: client.rs  configs.rs  data_collection.rs  main.rs  network.rs  open_loop_client.rs
src/server/: configs.rs  database.rs  main.rs  network.rs  server.rs
