[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
futures = "0.3.30"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
# omnipaxos = { git = "https://github.com/haraldng/omnipaxos.git", branch = "metronome-nobatch", features = ["serde", "toml_config"] }
# omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos.git", branch = "metronome-nobatch" }
omnipaxos = { git = "https://github.com/kevin-harrison/omnipaxos.git", branch = "metronome-nodecide", features = ["serde", "toml_config"] }
omnipaxos_storage = { git = "https://github.com/kevin-harrison/omnipaxos.git", branch = "metronome-nodecide" }
toml = "0.8.11"
tempfile = "3.13.0"
chrono = "0.4.38"
csv = "1.3.0"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
